Mobile Responsive CSS

--- a/index.html
+++ b/index.html
@@ -30,6 +30,33 @@
                 border-color: rgba(200,200,200,0.5);
                 padding: 8px;
             }
+            @media only screen and (max-width: 700px) {
+              body {
+                padding-top: 40px;
+                text-align: center;
+                font-size: 44pt;
+                font-family: 'Bebas Neue', cursive;
+            }
+            h1{
+                font-size: 140pt;
+                padding-bottom: 40px;
+            }
+            h4 {
+                font-family: 'Saira Condensed', sans-serif;
+            }
+            p {
+                margin: 8pt -8pt;
+            }
+            button {
+                background-color: #eee;
+                font-size: 34pt;
+                border-radius: 60px;
+                border-width: 4px;
+                border-color: rgba(200,200,200,0.5);
+                padding: 16px;
+            }
+            }
+            
         </style>
     </head>
 <body>
